@@ -91,3 +91,8 @@ I: 275
 N: Tarek Ziade
 E: ziade.tarek
 I: 281
+
+N: Luca Cipriani
+C: Turin, Italy
+E: luca.opensource@gmail.com
+I: 278
