@@ -23,6 +23,8 @@ NEW FEATURES
  * Issue #278: new Process.as_dict() method.
  * Issue #281: ppid, name, exe, cmdline and create_time properties of Process
    class are now cached after being accessed.
+ * Issue #282: psutil.STATUS_* constants can now be compared by using their
+   string representation.
 
 BUGFIXES
 
@@ -51,6 +53,8 @@ API CHANGES
  * ppid, name, exe, cmdline and create_time properties of Process class are now
    cached after being accessed, meaning NoSuchProcess will no longer be raised
    in case the process is gone in the meantime.
+ * psutil.STATUS_* constants can now be compared by using their string
+   representation.
 
 
 0.4.1 - 2011-12-14
